--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -1,8 +1,11 @@
+
+
+
 .jumbotron {
 	background-image: url("../img/pghOverview.png");
 	background-size: cover;
 	height: 100%;
-	padding: 10% 0% 10% 0%;
+	padding: 5% 0% 5% 0%;
 	margin: 0px;
 	align: center;
 	background-color: transparent;
@@ -16,8 +19,41 @@
 
 #logo-container {
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	height:auto;
 	width: auto;
+	
+}
+
+.img-circle {
+	
+	height: 200px;
+	width: 200px;
+	border-radius: 50%;
+	margin-bottom: 10px;
+}
+
+.small-box {
+	width:auto;
+	height: auto;
+	text-align:center;
+	
+}
+
+.category-img {
+	
+	
+	height: auto;
+	width: 1100px;
+}
+
+.box-container {
+	
+	background-size: cover;
+	margin-top:20px;
+	padding:0px;
+	display: flex;
+	justify-content: space-around;
+	height:300px;
 	
 }
