--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -2,9 +2,10 @@
 
 
 .jumbotron {
-	background-image: url("../img/headerBG.png");
+	background-image: url("../img/pghOverview.png");
 	background-size: cover;
-	height:100%;
+	height: 100%;
+	padding: 5% 0% 5% 0%;
 	margin: 0px;
 	align: center;
 	background-color: transparent;
