--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -2,7 +2,7 @@
 
 
 .jumbotron {
-	background-image: url("../img/pghOverview.png");
+	background-image: url("../img/headerBG.png");
 	background-size: cover;
 	height: 100%;
 	padding: 5% 0% 5% 0%;
@@ -40,9 +40,13 @@
 	
 }
 
+.h1-center {
+	text-align:center;
+	display:flex;
+	justify-content:center;
+	
+}
 .category-img {
-	
-	
 	height: auto;
 	width: 1100px;
 }
@@ -55,5 +59,6 @@
 	display: flex;
 	justify-content: space-around;
 	height:300px;
+	
 	
 }
