--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -1,8 +1,10 @@
-
+.header-font-face {
+	font-family: "SignPainter-HouseScript", Avenir, sans-serif;
+}
 
 
 .jumbotron {
-	background-image: url("../img/headerBG.png");
+	background-image: url("../img/PGH-BG.png");
 	background-size: cover;
 	height: 100%;
 	padding: 5% 0% 5% 0%;
@@ -13,7 +15,7 @@
 }
 
 #logo {
-	height: 100px;
+	height: 200px;
 	width:auto;
 }
 
@@ -44,6 +46,7 @@
 	text-align:center;
 	display:flex;
 	justify-content:center;
+	font-size:75px;
 	
 }
 .category-img {
