--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -6,6 +6,11 @@
 	font-family: Avenir, sans-serif;
 }
 
+.navbar-font-face {
+	font-family: Avenir, sans-serif;
+	font-size: 16px;
+}
+
 #map {
 	height: 400px;
 	width: 1000px;
@@ -161,5 +166,5 @@
 
 #avatar {
 	height: auto;
-	width: auto;
+	width: 100px;
 }
