--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -177,29 +177,29 @@
 }
 
 #location1 {
-	height:100px;
+	height:auto;
 	width: 200px;
-	background-color: red;
+	align-text:center;
 }
 #location2 {
-	height:100px;
+	height:auto;
 	width: 200px;
-	background-color: orange;
+	align-text:center;
 }
 #location3 {
-	height:100px;
+	height:auto;
 	width: 200px;
-	background-color: yellow;
+	align-text:center;
 }
 #location4 {
-	height:100px;
+	height:auto;
 	width: 200px;
-	background-color: green;
+	align-text:center;
 }
 #location5 {
-	height:100px;
+	height:auto;
 	width: 200px;
-	background-color: blue;
+	align-text:center;
 }
 
 #how-it-works-container {
@@ -232,6 +232,14 @@
 	width: 100px;
 }
 
+.profile-itinerary {
+height:auto;
+width: 400px;
+font-size: 14px;
+color: white;
+
+}
+
 
 #itinerary-container {
 	
@@ -242,9 +250,16 @@
 }
 
 
+#types-filter-container {
+	
+	display: flex;
+	justify-content: center;
+	
+}
+
 #location-deets-container {
 	display: flex;
-	justify-content: right; 
+	justify-content: center; 
 	width: 100%;
 	height:auto;
 	
@@ -277,10 +292,24 @@
 }
 
 #deets-hoursOrPhone {
-	width: 50px;
+	width: 222px;
 	font-family: Avenir, sans-serif;
 	font-size: 14px;
 	
 }
+
+#add-button {
+	height: 50px;
+	width: auto;
+	
+}
+
+#type_holder {
+	float: left;
+	background-color: orange;
+	display: flex;
+	justify-content: center;
+}
+
 
 
