--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -13,6 +13,38 @@
 
 
 
+/* Home Page Carousel */
+
+header.carousel {
+    height: 50%;
+}
+
+header.carousel .item,
+header.carousel .item.active,
+header.carousel .carousel-inner {
+    height: 100%;
+}
+
+header.carousel .fill {
+    width: 1300px;
+    height: 400px;
+    background-position: center;
+}
+
+header .carousel-control {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width:10%;
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  background-color: rgba(0, 0, 0, 0);
+  filter: alpha(opacity=100);
+  opacity: .0;
+}
 
 
 .navbar-default {
