--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -119,7 +119,7 @@ header .carousel-control {
 	height: auto;
 	display: flex;
 	justify-content: center;
-	margin: 30px 0px 30px 0px;
+	margin: 30px 0px 0px 0px;
 }
 
 
@@ -291,12 +291,7 @@ color: white;
 }
 
 
-#types-filter-container {
-	
-	display: flex;
-	justify-content: center;
-	
-}
+
 
 #location-deets-container {
 	display: flex;
@@ -345,11 +340,59 @@ color: white;
 	
 }
 
-#type_holder {
-	float: left;
-	background-color: orange;
+#types-filter-container {
 	display: flex;
 	justify-content: center;
+	
+}
+
+#submit-buttons-container {
+	
+	width: 100%;
+	height: auto;
+	display: flex;
+	justify-content: space-between;
+	background-color: #000000;
+}
+
+#frm_map {
+	width: 100%;
+}
+
+input[type=button]{
+                 width: auto;
+                 background: #000000;
+                 color: #ffffff;
+                 font-family: Avenir, sans-serif;
+                 font-size: 16px;
+                 height: 30px;
+                 border-color: #000000;
+}
+             
+.submit-button {
+	width: auto;
+	height:auto;
+	float: left;
+	display: flex;
+	justify-content: center;
+}
+
+.p-radio-button-text {
+	margin-left: 10px;
+}
+
+#type_holder {
+	width: 100%;
+	float: left;
+	display: flex;
+	justify-content: space-between;
+}
+
+.radio-button-container {
+	width: auto;
+	display: flex;
+	justify-content: center;
+	
 }
 
 
